Fix avatar alignment

--- a/source/stylesheets/components/card/_avatar.sass
+++ b/source/stylesheets/components/card/_avatar.sass
@@ -1,10 +1,7 @@
 .card
   &__avatar
     background-color: get-color(raiz)
-    display: block
     height: 70px
-    margin-left: auto
-    margin-right: auto
     text-indent: -9999px
     width: 70px
 
@@ -27,8 +24,8 @@
       width: 90px
 
     &--teacher
-      border-radius: 50%
       border: 5px solid get-color(air)
+      border-radius: 50%
       margin: -35px auto 0
 
     &--list
